# contadores

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  FRONTEND_MISSION.md  MISSION.md  README.md  deploy_to_server.sh  docker-compose.yml  improvement.md  pyproject.toml  read_google_sheet.py  run.sh  server_logs.sh
.playwright-mcp/: page-2026-05-06T17-48-56-737Z.yml  page-2026-05-06T19-07-34-800Z.yml
abogados/: README.md
backend/: README.md
config/: default-funnels.json
media/: README.md
media/examples/: README.md
media/templates/: README.md
presentation/loom-video-vender-a-contadores/: Konecta-Loom-Vender-a-Contadores-Final.pptx  Loom Script 60s.html  Loom Script-print.html  Loom Script.html  Loom-Script.txt  README.md  deck-export.html  export-pptx-reel.mjs  export-pptx.mjs  package-lock.json  package.json  sync-deck-export-60s.mjs  sync-deck-export-reel.mjs  sync-deck-export.mjs
scripts/: build_contadores_crm_runner_delta.py  install_contadores_crm_launchd.sh  render_contadores_crm_runner_dashboard.py  run_contadores_crm_hourly_followup.sh  sync_contadores_crm_runner_status.py
scripts/launchd/: com.konecta.contadores.crm-followup.plist
scripts/probes/: codex_sdk_image_probe.py  codex_sdk_plugin_probe.py
src/: README.md
src/backend/: README.md  __init__.py  agent_cli.py  audio_transcription.py  audit_delivery_email_content.py  auth.py  base.py  calendar_events.py  calendly.py  campaign_meta_plan.py  client_lead_config.py  cloudflare_registrar.py  codex_utils.py  config.py  database.py  deep_research.py  funnel_config.py  lead_template_utils.py  main.py  meta_ads_inventory.py  (+9 more)
src/bot/: Dockerfile  logging_utils.py  main.py  providers.py  pyproject.toml  simulation.py  utils.py  webhook_inbox.py
src/bot/scripts/: whatsapp_template_echo_test.py
src/bot/tests/: conftest.py  test_agentmail_provider.py  test_automated_auditor_intake.py  test_client_lead_delivery.py  test_contadores_flow.py  test_crm_flow.py  test_email_dispatch_spacing.py  test_logging_utils.py  test_whatsapp_inbound_provider.py  test_whatsapp_template_dispatch.py  test_worker_loop.py
traefik/: dynamic.yml
wiki/: README.md  agent-api-cli.md  frontend-concept-ledger.md  platform-architecture.md  platform-update-and-operator-guide.html
(+258 files in other folders)
