[project]
name = "contadores"
version = "0.1.0"
description = "Scripts para leer datos desde Google Sheets"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.45.0",
]
