[project]
name = "contadores"
version = "0.1.0"
description = "Contadores backoffice and WhatsApp follow-up runtime."
requires-python = ">=3.13"
dependencies = [
    "attachments>=0.25.1",
    "dspy-ai>=3.0.4",
    "fastapi[standard]>=0.124.4",
    "firecrawl>=4.17.0",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "openai>=2.16.0",
    "openai-codex-app-server-sdk @ git+https://github.com/openai/codex.git#subdirectory=sdk/python",
    "perplexityai>=0.27.0",
    "phonenumbers>=9.0.19",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.10",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.27",
]

[project.optional-dependencies]
messenger = [
    "google-auth>=2.48.0",
    "google-api-python-client>=2.189.0",
    "google-auth-oauthlib>=1.2.4",
    "prefect>=3.6.16",
    "pywa>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.deptry]
known_first_party = ["backend"]
package_module_name_map = { "dspy-ai" = "dspy" }

[dependency-groups]
dev = [
    "deptry>=0.24.0",
]
