[project]
name = "contadores-bot"
version = "0.1.0"
description = "Stateless channel bot for Contadores"
requires-python = ">=3.13"
dependencies = [
  "dspy-ai>=3.0.4",
  "fastapi[standard]>=0.124.4",
  "httpx>=0.28.1",
  "phonenumbers>=9.0.19",
  "pywa>=3.8.0",
  "pydantic>=2.12.5",
  "agentmail>=0.4.12",
  "svix>=1.89.0",
  "google-auth>=2.49.1",
  "google-api-python-client>=2.193.0",
  "unquotemail>=1.0.11",
]

[tool.uv]
package = false

[tool.deptry]
package_module_name_map = { "pywa" = ["pywa", "pywa_async"] }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "deptry>=0.24.0",
]
